# src/controller/task.controllers.js
@@ -6,13 +6,21 @@ const create = async (req, res) => {
     // #swagger.tags = ["Task"]
     /* #swagger.parameters['body'] = {
         in: 'body',
-        description: 'datos para nuevo registro'
+        description: 'Datos para nuevo registro',
+        schema:{
+            $ref: '#/definitions/AddTask'
+        }
     } */
 
     try {
         const response = await services.create(req.body);
         res.status(201).json({ success: true, data: response });
-        
+        /* #swagger.responses[201] = {
+            description: 'Registro de nueva tarea',
+            schema: {
+                $ref: '#/definitions/AddTask'
+            }
+        } */
     } catch (error) {
         res.status(500).send({ success: false, message: error.message });
     }
@@ -23,7 +31,12 @@ const getAll = async (req, res) => {
     try {
         const response = await services.find();
         res.json(response);
-        
+        /* #swagger.responses[200] = {
+            description: 'Obtencion de todas las tareas con categorias',
+            schema: {
+                $ref: '#/definitions/Task'
+            }
+        } */
     } catch (error) {
         res.status(500).send({ success: false, message: error.message });
     }
@@ -40,6 +53,12 @@ const getById = async (req, res) => {
         const { id } = req.params;
         const response = await services.findOne(id);
         res.json(response);
+        /* #swagger.responses[200] = {
+            description: 'Obtencion de todas las tareas con categorias',
+            schema: {
+                $ref: '#/definitions/Task'
+            }
+        } */
     } catch (error) {
         res.status(500).send({ success: false, message: error.messagge });
     }
@@ -47,6 +66,17 @@ const getById = async (req, res) => {
 
 const update = async (req, res) => {
     // #swagger.tags = ["Task"]
+    /* #swagger.parameters['id'] = {
+        in: 'path',
+        description: 'Busqueda de id para seleccionar tarea a modificar',
+    } */
+    /* #swagger.parameters['body'] = {
+        in: 'body',
+        description: 'Datos para nuevo registro',
+        schema:{
+            $ref: '#/definitions/AddTask'
+        }
+    } */
     try {
         const { id } = req.params;
         const body = req.body;
